[package]
name = "rust-graphql-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0.4"
async-trait = "0.1.56"
serde = {version = "1.0.138", features = ["derive"]}
serde_json = "1.0.82"
tokio = {version = "1.19.2", features = ["full"]}
uuid = {version = "1.1.2", features = ["v4"]}
